--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "body-parser": "^1.18.2",
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.2",
+    "mongoose": "^5.0.7",
+    "path": "^0.12.7",
     "request": "^2.83.0"
   }
 }
